[package]
name = "materialparser"
version = "0.1.0"
authors = ["underdisk <underdiskdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
ansi_term = { version = "0.12.1" }